[package]
name = "demo_webrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.21.0"
hyper = { version = "0.14.26", features = ["full"] }
lazy_static = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
webrtc = "0.11"
